--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "natours",
+  "name": "Tripify",
   "version": "1.0.0",
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
@@ -10,7 +10,7 @@
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url .",
     "build:js": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js --public-url ."
   },
-  "author": "Jonas Schmedtmann",
+  "author": "Abhinay Kumar",
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.5",
